# mpv-rs

./: Cargo.toml  README.md  build.rs
examples/: sdl2.rs  simple.rs
src/: lib.rs  mpv_error.rs
