[package]
name = "mpv"
version = "0.3.0"
authors = [
  "Cobrand <cobrandw@gmail.com>",
  "yamakaky",
  "Grégoire Geis <git@gregoirege.is>"
]
description = "Safe mpv bindings for Rust."
homepage = "https://github.com/Cobrand/mpv-rs"
repository = "https://github.com/Cobrand/mpv-rs"
documentation = "https://docs.rs/mpv/"
links = "mpv"
keywords = ["mpv", "video","player","media","binding"]
license = "MIT/Apache-2.0"

[dependencies]
enum_primitive = "0.1"
num-traits = "0.2"

[dev-dependencies]
log = "0.4"
sdl2 = "0.31"
sdl2-sys = "0.31"

[build-dependencies]
pkg-config = "0.3"
